<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/activity_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="@string/activity_a_label"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/font_medium"
            android:text="@string/temp_label"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/temp_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dip"
            android:typeface="monospace"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"

        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/font_medium"
            android:text="@string/humidity_label"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/humidity_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dip"
            android:typeface="monospace"
            android:inputType="phone"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <Button
            android:id="@+id/btn_set_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:background="@color/dark_green"
            android:text="@string/btn_set_label"
            android:onClick="sendUserInput"
            />

        <Button
            android:id="@+id/btn_cancel_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:background="@color/dark_green"
            android:text="@string/btn_cancel_label"
            android:onClick="closeActivity"
            />
    </RelativeLayout>

</LinearLayout>

